サインアップ処理にてアプリケーションを開く場合にボタンを表示するように変更

--- a/Server/2_succeeded.html
+++ b/Server/2_succeeded.html
@@ -19,17 +19,18 @@
   <div data-role="page" data-control-title="サインイン成功" id="2_succeeded">
       <div data-theme="a" data-role="header">
           <h3>
-              サインイン成功
+              成功
           </h3>
       </div>
       <div data-role="content" style="padding: 0px">
           <div id="message" data-controltype="htmlblock">
               <div>
-                  サインインに成功しました。
-                  <div>
-                  </div>
+                  サインアップ成功
               </div>
           </div>
+          <a id="openApplication" data-role="button" href="2_succeeded.html">
+              アプリケーションで開く
+          </a>
       </div>
   </div>
 </body>
