--- a/Server/2_succeeded.html
+++ b/Server/2_succeeded.html
@@ -25,7 +25,8 @@
       <div data-role="content" style="padding: 0px">
           <div id="message" data-controltype="htmlblock">
               <div>
-                  サインアップ成功
+                  <div>
+                  </div>
               </div>
           </div>
           <a id="openApplication" data-role="button" href="2_succeeded.html">
