ページのカスタマイズに対応。 TODO:カスタマイズ要素を追加する

--- a/Server/1_signup.html
+++ b/Server/1_signup.html
@@ -18,11 +18,11 @@
 <body>
   <div data-role="page" data-control-title="Signup" id="1_signup">
       <div data-theme="a" data-role="header">
-          <h3>
+          <h5 id="headerTitle">
               サインアップ
-          </h3>
+          </h5>
       </div>
-      <div data-role="content" style="padding: 0px">
+      <div data-role="content" style="padding: 10px">
           <div id="message" data-controltype="htmlblock">
               <div>
                   パスワードを入力してください。
