--- a/Server/3_failured.html
+++ b/Server/3_failured.html
@@ -18,11 +18,11 @@
 <body>
   <div data-role="page" data-control-title="サインイン失敗" id="3_failured">
       <div data-theme="a" data-role="header">
-          <h3>
+          <h5 id="headerTitle">
               サインイン失敗
-          </h3>
+          </h5>
       </div>
-      <div data-role="content" style="padding: 0px">
+      <div data-role="content" style="padding: 10px">
           <div id="message" data-controltype="htmlblock">
               <div>
                   サインインに失敗しました。
