--- a/Server/2_succeeded.html
+++ b/Server/2_succeeded.html
@@ -18,15 +18,14 @@
 <body>
   <div data-role="page" data-control-title="サインイン成功" id="2_succeeded">
       <div data-theme="a" data-role="header">
-          <h3>
+          <h5 id="headerTitle">
               成功
-          </h3>
+          </h5>
       </div>
-      <div data-role="content" style="padding: 0px">
+      <div data-role="content" style="padding: 10px">
           <div id="message" data-controltype="htmlblock">
               <div>
-                  <div>
-                  </div>
+                  サインアップ成功
               </div>
           </div>
           <a id="openApplication" data-role="button" href="2_succeeded.html">
